
- when PyXML is installed not all tests may run through (see issue #34 for details) as PyXMLs implementation of ``xml.dom.DOMException`` differs from the default (minidom and I guess others) implemtation. Nothing really to worry about...


Development Version
===================
- FEATURE: Implemented parsing of CSSCalc values. General syntax is checked but not if operators in calc are actually the right kind like DIMENSION * DIMENSION. (issue #37)

- FIXED issue #20 and #35 (Test fail CSSParser.parseUrl() error with Python 3.3)

- FIXED issue #21: (almost all) deprecation warning in Py 3.3 removed. Some minor warnings left.

- FIXED issue #30 (Test failed)

- FIXED issue #33 (well kinda): Added not that cssutils is **not** threadsafe!

- FIXED issue #34: More complext MediaQueries should be parsable now. A few slight changes in behavior are:
	 - xml.dom.SyntaxErr raised instead of xml.dom.InvalidCharacterErr for an unknown media type
     - removed (old Opera) ``handheld`` media type special case. If defined with ``all`` only ``all`` will be kept


Latest Stable Version
=====================

0.9.10 130331
    - BUGFIX: False HASH color values like ``#xyz`` were not being handled properly (thanks to Teruaki Koizumi)

    - Fixed issue #23: Tests do work properly in newer Python (>2.7.1?) version now, old versions will report error. Before this was the other way round but this makes more sense probably

    - Fixed issue #24: rgba color values did not validate properly

    - (Jason R. Coombs) Fixed issue #25: Cssutils installs "tests" package

    - Fixed issue #27: Small magnitude float values serialized incorrectly

    - Fixed issue #28: Standalone semicolons in CSSStyleDeclaration is now simply stripped and does not remove directly following property too


Archived Versions
=================

0.9.10b1 120428